# app.smarterbot.store

./: .env.example  .gitignore  .vercel-deploy  .vercel-deploy-trigger  .vercel-timestamp  AUTOMATIZACIONES-README.md  CLOUDFLARE-MCP-SETUP.md  CONFIGURE-VERCEL-NOW.md  DEPLOY-STATUS.md  FIX-CLERK-SSL-ERROR.md  IMPLEMENTACION-COMPLETA.md  MCP-DELIVERY-FASTAPI-MCP.md  PROYECTO-COMPLETADO.md  README-VAULT-MCP.md  README.md  README.old.md  VAULT-MCP-SETUP.md  deploy-now.sh  deploy-to-vercel.sh  docker-compose.mcp.yml  eslint.config.mjs  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  reset-store-env.sh  setup-vercel-env.sh  smarteros.spec.yml  tailwind.config.ts  vercel-env-config.txt  vercel.json
app/: globals.css  layout.tsx  loading.tsx  page.tsx
assets/: theme.css
components/: auth-checker.tsx  auth-debug.tsx  auth-form.tsx  background-fx.tsx  chatwoot-widget.tsx  clerk-wrapper.tsx  dashboard-content.tsx  demo-dashboard-content.tsx  demo-mode-toggle.tsx  mcp-console-client.tsx  service-card.tsx  setup-guide.tsx  tenant-selector.tsx  tenant-wizard.tsx  theme-toggle.tsx  workflows-compact.tsx
fastapi-mcp-router/: Dockerfile  README.md  pyproject.toml
fastapi-mcp-router/src/router/: __init__.py  auth.py  main.py  models.py  router.py
fastapi-mcp-router/src/router/mcp/: __init__.py  inventory.py  invoices.py  leads.py  payments.py
fastapi-mcp-router/tests/: test_router.py
lib/: chatwoot-client.ts  supabase.ts
mcp-modules/: README.md
n8n-client/: README.md  workflow-mcp-client.json
odoo-mcp-client/: README.md  __manifest__.py
(+69 files in other folders)
