[project]
name = "fastapi-mcp-router"
version = "0.1.0"
description = "SmarterOS FastAPI router: auth + business dispatch to MCP modules"
authors = [{ name = "SmarterOS" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.6.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.1.0", "pytest-asyncio>=0.23.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
